--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "samarth-webcomponents": "https://github.com/stackroute/Samarth-WebComponents.git#intgbranch_wave9",
     "google-material-icons": "#2.1.3",
     "angular-local-storage": "^0.5.2",
-    "angular-sanitize": "^1.5.8"
+    "angular-sanitize": "^1.5.8",
+    "angular-material-data-table": "^0.10.9"
   }
 }
