--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
         "google-material-icons": "#2.1.3",
         "angular-local-storage": "^0.5.2",
         "angular-sanitize": "^1.5.8",
-        "angular-material-data-table": "^0.10.9"
+        "angular-material-data-table": "^0.10.9",
+        "html2canvas": "^0.4.1"
     }
 }
