--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
         "angular-sanitize": "^1.5.8",
         "angular-material-data-table": "^0.10.9",
         "angular-moment": "^1.0.0",
-        "moment": "^2.15.1"
+        "moment": "^2.15.1",
+        "ng-simplePagination": "^1.0.3"
     }
 }
